--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -1,28 +1,69 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
-  height: 72px;
+  font-weight: 700;
+  font-size: 24px;
   background: darkmagenta;
   color: white;
+  padding: 12px;
+  flex: 0 0 auto;
 }
 
 .footer {
-  height: 72px;
   background: #eee;
   color: darkmagenta;
+  flex: 0 0 auto;
+  padding: 16px;
+  font-size: 12px;
+  text-align: center;
 }
 
 .sidebar {
-  width: 300px;
+  width: 240px;
   background: royalblue;
+  flex: 0 0 auto;
 }
 
 .card {
   border: 1px solid #eee;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+  box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.06);
   border-radius: 4px;
+  margin: 16px;
+  padding: 16px;
+  flex: 1 0 auto;
+  max-width: 300px;
+}
+
+.card-holder {
+  display: flex;
+  margin: 32px;
+  flex: 1;
+  flex-wrap: wrap;
+}
+
+.middle {
+  flex: 1;
+  display: flex;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  padding: 8px;
 }
